# MVP

./: main.py  pyproject.toml
app/: __init__.py
app/core/: config.py
app/core/database/: db.py
app/core/models/: models.py
app/handlers/: router.py
app/schemas/: schemas.py
app/utils/: document.py
